# Vrf_contract

./: .gitignore  README.md  build.sh
python_cli/: cli.py  config.ini  requirements.txt
rust_client/: Cargo.toml  build.rs
rust_client/protos/: vrf.proto
rust_client/src/: client.rs  lib.rs  vrf.rs
solidity_project/: package-lock.json  package.json  truffle-config.js
solidity_project/contracts/: Register.sol  Verify.sol  register.sol  verify.sol
solidity_project/migrations/: 2_deploy_contracts.js
solidity_project/output/: Myecrecover.abi  Register.abi  Verify.abi
solidity_project/scripts/: generate_abi.sh
